added home page

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+body {
+  background-color: black !important;
+  color: white !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.albumCard {
+  height: 250px;
+  width: 180px;
+  background-color: rgb(24, 23, 23);
+  cursor: pointer;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.albumCard span:first-child {
+  font-size: 16px;
+  font-weight: bold;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.albumCard span:last-child {
+  font-size: 15px;
+  color: grey;
 }
-
-.App-link {
-  color: #61dafb;
+.albumCard:hover {
+  background-color: rgb(34, 32, 32) !important;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.albumPlayBtn {
+  font-size: 40px;
+  padding: 5px;
+  position: absolute;
+  border-radius: 50%;
+  color: black;
+  background-color: rgb(17, 214, 17) !important;
+  right: 5%;
+  bottom: 5%;
+  display: none;
+}
+.albumCard :hover .albumPlayBtn {
+  display: block;
 }
